[gd_scene load_steps=6 format=3 uid="uid://c7ob71i2ta1iq"]

[ext_resource type="Script" path="res://scenes/ModsMenu.gd" id="1_i7gh0"]
[ext_resource type="PackedScene" uid="uid://bgilym2qsrs4y" path="res://scenes/fonts/Alphabet.tscn" id="2_1okte"]
[ext_resource type="Script" path="res://scripts/FreeplayAlphabet.gd" id="3_4o3d3"]
[ext_resource type="Texture2D" uid="uid://djvwyf5uvg64p" path="res://assets/images/menus/modsmenu/contributor_icons/ninjamuffin99.png" id="5_56ilp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a28mi"]
bg_color = Color(0.152344, 0.152344, 0.152344, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="ModsMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_i7gh0")

[node name="bg" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.6)
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="__TemplateItem__" parent="." instance=ExtResource("2_1okte")]
visible = false
custom_minimum_size = Vector2(371, 70)
offset_right = 371.0
script = ExtResource("3_4o3d3")
is_template = true
text = "template"

[node name="Icon" type="Sprite2D" parent="__TemplateItem__"]
position = Vector2(-72, 32)
scale = Vector2(0.8, 0.8)

[node name="MenuItems" type="Node2D" parent="."]

[node name="FumnyStrip" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0.6)
offset_top = 660.0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="Show Description" type="Button" parent="FumnyStrip"]
layout_mode = 0
offset_left = 14.0
offset_top = 10.0
offset_right = 179.0
offset_bottom = 47.0
text = "Show Description"

[node name="Show Contributors" type="Button" parent="FumnyStrip"]
layout_mode = 0
offset_left = 190.0
offset_top = 10.0
offset_right = 355.0
offset_bottom = 47.0
text = "Show Contributors"

[node name="Open Mods Folder" type="Button" parent="FumnyStrip"]
layout_mode = 0
offset_left = 1102.0
offset_top = 10.0
offset_right = 1267.0
offset_bottom = 47.0
text = "Open Mods Folder"

[node name="Description" type="Panel" parent="."]
visible = false
offset_left = 206.5
offset_top = 48.5
offset_right = 1073.5
offset_bottom = 623.5
theme_override_styles/panel = SubResource("StyleBoxFlat_a28mi")

[node name="ScrollContainer" type="ScrollContainer" parent="Description"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 859.0
offset_bottom = 567.0

[node name="Label" type="Label" parent="Description/ScrollContainer"]
layout_mode = 2
text = "piss"

[node name="Contributors" type="Panel" parent="."]
visible = false
offset_left = 189.0
offset_top = 396.0
offset_right = 430.0
offset_bottom = 650.0
theme_override_styles/panel = SubResource("StyleBoxFlat_a28mi")

[node name="ScrollContainer" type="ScrollContainer" parent="Contributors"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 241.0

[node name="VBoxContainer" type="VBoxContainer" parent="Contributors/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ContributorTemplate" type="Panel" parent="Contributors"]
visible = false
custom_minimum_size = Vector2(224, 40)
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 232.0
offset_bottom = 48.0

[node name="Icon" type="Sprite2D" parent="Contributors/ContributorTemplate"]
position = Vector2(20, 21)
scale = Vector2(0.2, 0.2)
texture = ExtResource("5_56ilp")

[node name="Label" type="Label" parent="Contributors/ContributorTemplate"]
layout_mode = 0
offset_left = 35.0
offset_top = 7.0
offset_right = 219.0
offset_bottom = 33.0
text = "Template"
clip_text = true
text_overrun_behavior = 3

[connection signal="pressed" from="FumnyStrip/Show Description" to="." method="_on_show_item_pressed" binds= ["Show Description"]]
[connection signal="pressed" from="FumnyStrip/Show Contributors" to="." method="_on_show_item_pressed" binds= ["Show Contributors"]]
[connection signal="pressed" from="FumnyStrip/Open Mods Folder" to="." method="_on_show_item_pressed" binds= ["Open Mods Folder"]]
